--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Sep 25 11:05:20 IDT 2020
-sdk.dir=/home/arikzil/Android/Sdk
+#Sat Sep 26 13:43:33 IDT 2020
+sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
