--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,32 +26,30 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".catalog.CatalogFrontActivity">
             <intent-filter>
                 <action android:name="transparent.text.SECONDACTIVITY" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".ItemDetailsActivity" />
-        <activity android:name=".DepartmentActivity" />
-
+        <activity
+            android:name=".catalog.ItemDetailsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".catalog.DepartmentActivity"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".OpenCameraActivity"
-            android:screenOrientation="portrait"
-
-
-            >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <!-- ARCODE REQUIRED-->
-
         <meta-data
             android:name="com.google.ar.core"
             android:value="required" />
