--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
@@ -26,7 +25,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".catalog.CatalogFrontActivity">
+        <activity android:name=".catalog.CatalogFrontActivity"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="transparent.text.SECONDACTIVITY" />
 
@@ -49,7 +50,7 @@
             </intent-filter>
         </activity>
 
-        <!-- ARCODE REQUIRED-->
+        <!-- ARCORE REQUIRED-->
         <meta-data
             android:name="com.google.ar.core"
             android:value="required" />
