--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Sep 30 19:08:49 IDT 2020
-sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
+sdk.dir=/home/arikzil/Android/Sdk
