updated rlt bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.huji.couchmirage">
+    package="com.huji.couchmirage"
+    >
 
     <!-- ARCODE REQUIRED-->
     <uses-permission android:name="android.permission.CAMERA" />
@@ -22,14 +23,18 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:supportsRtl="false"
+        android:theme="@style/AppTheme"
+
+
+        >
 
 
         <!-- catalog related activities -->
         <activity
             android:name=".catalog.CatalogFrontActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="transparent.text.SECONDACTIVITY" />
 
